<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical"
    android:weightSum="1">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/intro"
        android:layout_margin="3dp"
        android:textSize="30sp"
        android:textStyle="bold"
        android:layout_gravity="center_horizontal" />

    <ImageView
        android:id="@+id/picture"
        android:layout_width="match_parent"
        android:layout_height="295dp"
        android:contentDescription="@string/picture"
        android:layout_margin="5dp"
        android:layout_gravity="center"
        android:layout_weight="0.54" />

    <Button
        android:id="@+id/capturarfoto"
        android:layout_width="150dip"
        android:layout_height="wrap_content"
        android:text="@string/capture"
        android:layout_gravity="center_horizontal"
        android:paddingTop="0dip" />

    <Button
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:text="@string/EnviarFoto"
        android:onClick="enviarfoto"
        android:id="@+id/enviarfoto"
        android:layout_gravity="center_horizontal" />

    <Button
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:text="@string/despues"
        android:onClick="mastarde"
        android:id="@+id/mastarde"
        android:layout_gravity="center_horizontal" />



</LinearLayout>