<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:fillViewport="true">

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp">

        <TextView
            android:id="@+id/header"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:drawableLeft="@drawable/bareandologo"
            android:drawableStart="@drawable/bareandologo"
            android:gravity="center_vertical"
            android:layout_centerHorizontal="true" />

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/header"
            android:orientation="vertical"
            android:padding="30dip"
            android:weightSum="1"
            android:id="@+id/linearLayout">

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:id="@+id/loginUsername"
                android:text="@string/nick"/>

            <EditText
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:id="@+id/editUsername"
                android:layout_marginBottom="20dip"
                android:layout_marginTop="5dip"
                android:inputType="text"
                android:singleLine="true"/>

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:id="@+id/loginPassword"
                android:text="@string/password"/>

            <EditText
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:id="@+id/editPassword"
                android:layout_marginTop="5dip"
                android:inputType="textPassword"
                android:singleLine="true"/>

            <CheckBox
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/mantener"
                android:id="@+id/saveLogin"
                android:layout_alignLeft="@+id/header"
                android:layout_alignStart="@+id/header"
                android:layout_marginTop="5dp" />

            <Button
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:id="@+id/buttonLogin"
                android:layout_marginTop="5dip"
                android:onClick="signIn"
                android:text="@string/entrar"/>


            <TextView
                android:id="@+id/LinkRegister"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:clickable="true"
                android:onClick="registrarse"
                android:gravity="center"
                android:text="@string/register"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="#0b84aa"
                android:layout_weight="0.09"
                android:layout_marginTop="20dip" />

            <TextView
                android:id="@+id/LinkInvitado"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:clickable="true"
                android:onClick="invitado"
                android:gravity="center"
                android:text="@string/invitado"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="#ffff8d00"
                android:layout_marginTop="20dip" />
            </LinearLayout>

    </RelativeLayout>

</ScrollView>